# cv-analyzer

./: .gitignore  README.md  app.py  autenticate.py  create_job.py  database.py  download_cv.py  pyproject.toml
