[project]
name = "cv-analyzer"
version = "0.1.0"
description = "Resume Analyzer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "streamlit-aggrid>=1.2.1.post2",
    "tinydb>=4.8.2",
]
